# steward

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  railway.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: eval.yml  publish.yml
.steward/: ledger_ed25519.pub
data/: answer_key.json  demo_results.json  fleet.json  tools.json
docs/: ARCHITECTURE.md  COST.md  USERS.md
evals/: __init__.py  llm_benchmark.py  llm_fixture.py  run.py  test_llm_tier.py
evals/benchmark/: fleet.json  labels.json  results.json  tools.json
examples/: claude_desktop_config.json  mcp.json  traces.jsonl
examples/frameworks/: crewai_export.json  langgraph_export.json  openai_agents_export.json
examples/redteam/exfil/: README.md  attack.py  server.py
examples/rules/: finance_sod_pack.yaml
steward/: __init__.py  __main__.py  adapters.py  app.py  campaigns.py  capability_classes.py  cli.py  control_mapping.py  diffing.py  enforce.py  findings.py  graph.py  incident_grounding.py  ledger.py  llm.py  loaders.py  models.py  notify.py  peer_analysis.py  pipeline.py  policy_gen.py  redaction.py  redteam.py  remediation.py  reporting.py  rulepacks.py  scoring.py  traces.py  web_service.py
steward/static/: app.css  dashboard.js
steward/templates/: _finding_context.html  base.html  dashboard.html  report.html  risk_card.html
tests/: conftest.py  test_adapters.py  test_app.py  test_audit_integration.py  test_campaigns.py  test_cli_gate.py  test_control_mapping.py  test_diffing.py  test_framework_adapters.py  test_incident_grounding.py  test_ledger.py  test_lethal_trifecta.py  test_llm_backends.py  test_llm_benchmark.py  test_llm_redaction.py  test_notify.py  test_peer_analysis.py  test_pipeline.py  test_policy_enforce.py  test_remediation.py  test_rulepacks.py  test_scoring.py  test_traces.py
