[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "steward-agent-governance"
version = "0.1.0"
description = "Citation-verified effective-access analysis for AI agent fleets."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Steward contributors" }]
dependencies = [
  "boto3>=1.35",
  "cryptography>=43.0",
  "fastapi>=0.115",
  "jinja2>=3.1",
  "networkx>=3.4",
  "pydantic>=2.9",
  "python-dotenv>=1.0",
  "PyYAML>=6.0",
  "typer>=0.12",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "hypothesis>=6.0",
  "pytest>=8.3",
  "ruff>=0.8",
]

[project.scripts]
steward = "steward.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["steward"]

[tool.pytest.ini_options]
testpaths = ["tests", "evals"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# Long prompt literals and evidence prose are intentionally kept readable as
# sentences; Ruff's formatter does not reflow them.
ignore = ["B008", "E501"]
